--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,8 @@ h1, h2, h3, h4 {
 }
 body {
   background:#FFFFFA;
-  font-family: 'Open Sans', ;
+  font-family: 'Open Sans',;
+  overflow-x: hidden;
 }
 .form-control {
   border: 1px solid #fff;
@@ -35,21 +36,6 @@ body {
     border-radius: 0;
     outline: 0;
 }
-.box-n {
-  background-color: #000;
-  padding: 20px;
-  margin: 30px 0;
-  text-align: center;
-  color: #fff;
-  font-size: 21px;
-  display: block;
-}
-.map {
-  display: none;
-}
-.box-n:focus .map {
-  display: block;
-}
 /* ============================*/
 header {
   width:100%;
@@ -62,8 +48,10 @@ header nav {
   position: fixed;
   width:100%;
   background:rgba(0, 0, 0, 0.2);
+background-image: url("https://www.transparenttextures.com/patterns/dark-wall.png");
+/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
   padding: 0;
-  z-index: 1;
+  z-index: 9999;
 }
 .menu_bar {
   display:none;
@@ -89,14 +77,22 @@ header nav ul li a:hover {
   color:#EA6F2A;
   text-decoration:none;
 }
-
+.espacio-b{
+  padding: 22px;
+  display: none;
+}
 .alto{
   bottom: 80px !important;
 }
+.alto-1{
+  bottom: 50px !important;
+}
 .alto2{
+  bottom: 70px;
   text-align: right !important;
 }
 .alto3{
+  bottom: 70px;
   text-align: left !important;
 }
 /* titulo =================*/
@@ -109,32 +105,31 @@ header nav ul li a:hover {
   margin: 0;
 }
 .s-t2{
-  font-size: 60px;
+  font-size: 40px;
   margin: 0;
   color: #151517;
   line-height: 1;
 }
 .s-sub2{
-  font-size: 39px;
+  font-size: 20px;
   margin: 0;
   line-height: 1;
 }
 .s-t3{
-  font-size: 83px;
+  font-size: 60px;
   margin: 0;
   line-height: 1;
   display: inline-block;
-  
 }
 .s-sub3{
   text-align: right;
-  font-size: 36px;
+  font-size: 25px;
   margin: 0;
   line-height:1;
 }
 .s-t4{
   font-weight: 500;
-  font-size: 70px;
+  font-size: 45px;
   color: #000;
   margin: 0;
   line-height: 1;
@@ -144,14 +139,15 @@ header nav ul li a:hover {
 .s-sub4{
   font-weight: 500;
   display: inline-block;
-  font-size: 38px;
+  font-size: 20px;
   margin: 0;
   line-height:1;
   text-align: center;
+  color: #fff;
 }
 .s-t5{
   font-weight: 500;
-  font-size: 83px;
+  font-size: 60px;
   margin: 0;
   color: #fff;
   line-height: 1;
@@ -161,16 +157,24 @@ header nav ul li a:hover {
 .s-sub5{
   font-weight: 500;
   display: inline-block;
-  font-size: 46px;
+  font-size: 35px;
   margin: 0;
   line-height:1;
   text-align: center;
 }
 /* consultoria*/
-.consultoria{
-  margin-top: -38px;
-
+.box-t{
+  position: relative;
+  margin-top: -60px;
+  background-color:#EDEEFF;
+   -moz-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
+  padding: 30px;
+  margin-bottom: 0;
+  border-top: 3px solid #C96A2B;
 }
+
 .equal {
   display: -webkit-box;
   display: -moz-box;
@@ -222,17 +226,17 @@ header nav ul li a:hover {
  font-weight: 500;
  text-align: center;
  border: 0;
- -webkit-transition: all ease 0.8s;
- -moz-transition: all ease 0.8s;
- transition: all ease 0.8s;
+ -webkit-transition: all ease 1s;
+ -moz-transition: all ease 1s;
+ transition: all ease 1s;
 
 }
 
 .boton_fondo_corredizo_izquierda:hover {
-  box-shadow: inset 340px 0 0 0 #AF5320;
+  box-shadow: inset 340px 0 0 0 #BC4808;
 }
 .pnaranja{
-  margin-top: 60px;
+  margin-top: 30px;
   font-size: 19px;
   text-align: center;
   color: #C96A2B;
@@ -351,6 +355,7 @@ header nav ul li a:hover {
   background-color: #C96A2B;
   border: 1px solid #C96A2B;
   text-decoration: none;
+  transition: all 0.8s;
 }
 
 .box-gene:hover p{
@@ -515,64 +520,302 @@ div#content .subsm, div#content2 .subsm, div#content3 .subsm, div#content4 .subs
   right: 50px;
   background-image: url(../img/icon-right.png);
 }
-/* fin Carrusel de libros */
+/* fin Carrusel de logos */
 
-
-/* clientes */
-.flex-column {
-  max-width: 380px;
-}
-.scale {
-  transform: scaleY(1.05);
-  padding-top: 5px; 
-}
-.img-modal{
+/* pruebas ======*/
+.gridywrap div[class*=gridy] {
+  background: #eee;
+  box-shadow: inset 0 0 0 1px #ddd;
+  padding: 15px; 
+  float: left;
   position: relative;
 }
+.gridywrap .gridy-1,
+.gridywrap .gridy-2,
+.gridywrap .gridy-3 {
+  width: 320px;
+  overflow: hidden;}
 
-.client{
-  display: none;
-  background-color: rgba(201, 106, 43, 0.9);
+.gridywrap .gridy-1 {width: 100%;}
+.gridywrap .gridy-2 {width: 100%;}
+.gridywrap .gridy-3 {width: 100%;}
+
+.gridywrap .gridyhe-1 {height: 320px;}
+.gridywrap .gridyhe-2 {height: 320px;}
+
+
+@media screen and (min-width: 640px) {
+  .gridywrap .gridyhe-2 {height: 320px;}
+  .gridywrap {
+    width: 100%;
+  }
+  .gridywrap .gridy-1 {width: 50%;}
+  .gridywrap .gridy-2 {width: 50%;}
+  .gridywrap .gridy-3 {width: 100%;}
+}
+@media screen and (min-width: 1024px) {
+  .gridywrap .gridy-1 {width: 33.3%;}
+  .gridywrap .gridy-2 {width: 66.6%;}
+  .gridywrap .gridy-3 {width: 100%;}
+  .gridywrap .gridyhe-2 {height: 640px;}
+}
+
+/*styling*/
+.gridywrap .gridimg {
   position: absolute;
   top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  background-position: center center;
+  background-size: cover;
+}
+.gridywrap .gridimg img {
+  width: 100%;
+}
+.gridywrap .gridinfo {
+  position: absolute;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0,0,0,0.1);
+  text-align: center;
+  transition: all 0.8s;
+}
+.gridywrap .gridinfo h3 {
+  font-size: 24px;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 130px 0 20px;
+  position: relative;
+}
+.gridywrap .gridinfo h3:after {
+  content: '';
+  width: 25px;
+  border-top: 4px solid #fff;
+  display: block;
+  margin: 0 auto;
+  margin-top: 25px;
+}
+.gridywrap .gridinfo .gridmeta {
+  transition-delay: 0.25s;
+}
+.gridywrap .gridinfo .gridmeta p {
+  display: inline-block;
+  font-size: 13px;
+  color: #fff;
+  margin-bottom: 15px;
+}
+.gridywrap .gridinfo .gridmeta p i {
+  margin-right: 5px;
+}
+.gridywrap .gridinfo .gridmeta p.gridwho {
+  margin-left: 25px;
+}
+.gridywrap .gridinfo p.gridexerpt {
+  width: 60%;
+  margin: 0 auto;
+  line-height: 22px;
+  margin-bottom: 25px;
+  color: #fff;
+  transition-delay: 0.5s;
+}
+
+.gridywrap .gridinfo * {
+  opacity: 0;
+  transition: all 0.8s;
+}
+.gridywrap .gridinfo h3 {
+  opacity: 1;
+}
+.gridywrap .gridinfo .grid-btn {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 auto;
+  width: 35px;
+  height: 35px;
+  line-height: 35px;
+  border-radius: 25px;
+  border: 1px solid #fff; 
+  display: block;
+  overflow: hidden;
+}
+.gridywrap .gridinfo .grid-btn:hover {
+  width: 75px;
+  background: rgba(0,0,0,0.3);
+  color: #fff;
+}
+.gridywrap .gridinfo .grid-btn span {
+  opacity: 0;
+  display: none;
+  transition: opacity 0.8s;
+}
+.gridywrap .gridinfo .grid-btn:hover span {
+  opacity: 1;
+  display: inline;
+}
+.gridywrap .gridinfo .grid-btn:hover i {
+  opacity: 0;
+  display: none;
+}
+
+.gridywrap .gridinfo:hover * {
+  opacity: 0.7;
+}
+.gridywrap .gridinfo:hover p {
+  opacity: 1;
+}
+.gridywrap .gridinfo:hover {
+  background: rgba(201, 106, 43, 0.7);
+}
+.gridywrap .gridinfo:hover h3 {
+  margin-top: 70px;
+  opacity: 1;
+}
+
+
+
+.box-n {
+  background-color: #000;
+  padding: 20px;
+  margin: 0;
   text-align: center;
   color: #fff;
-  font-size: 30px;
+  font-size: 21px;
+  display: block;
+}
+.box-n a{
+  color: #fff;
+  text-decoration: none;
+}
+.cerrar{
+  background-color: #000;
+  border:none;
+  color: #fff;
+  float: right;
+}
+
+/* contacto */
+.cont{
+  background-image: url(../img/back-contac.png);
+  background-size: cover;
+}
+.tcont{
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+}
+.cont ul{
+  list-style: none;
+  margin: 30px 0 0;
+  padding: 0;
+}
+.cont ul li{
+  color: #eee;
+  font-size: 14px;
+  font-weight: 600;
+}
+.cont ul li span{
+  display: inline-block;
+  background-color: #fff;
+  color: #000;
+  width: 25px;
+  height: 25px;
   vertical-align: middle;
+  font-size: 14px;
+  text-align: center;
+  margin: 10px 15px 22px 0;
 }
-.client p{
-  margin: 20% 0 -1%;
-  font-weight: 300;
-}
-.line2 {
-  padding: 1px;
-  display: block;
-  width: 50px;
-  background-color: #fff !important;
-  margin: 0 auto;
+.cont ul li a{
+  color: #C96A2B;
+  text-decoration: none;
 }
 
-.img-modal:hover .client{
-  display: block;
+.cont .redes{
+  list-style: none;
+  margin: 0 0 0 44px;
+}
+.cont .redes li{
+  display: inline-block;
+  color: #eee;  font-size: 14px;
+  font-weight: 600;
+  
+}
+.cont .redes li span{
+  background: none;
+  display: inline-block;
+  border: 1px solid #fff;
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  padding: 4px;
+  vertical-align: middle;
+  font-size: 14px;
+  text-align: center;
+  margin: 22px 15px 22px 0;
+}
+.form-contact .form-control{
+  background: none;
+}
+.top{
+  background-color: #000;
+  color: #fff;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  padding: 5px 0;
+  float: right;
+  margin: 10px;
+}
+.top i{
+  color: #fff;
+}
+/* Scroll animations styles */
+
+.scroll-animations {
+  display: flex;
 }
 
+.scroll-animations div {
+  flex-grow: 1;
+  padding: 30px;
+  text-align: center;
+  opacity: 0;
+  color: #333;
+}
+
+.scroll-animations div span {
+  font-size: 4em;
+  color: #5AA9E0;
+}
+
+.scroll-animations div h3 {
+  font-size: 1.9em;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
 /* =========================== responsive menu  ===========================*/
 
 @media screen and (max-width:980px ) {
+  .espacio-b{
+    display: block;
+  }
   header nav {
     width:80%;
     height:100%;
     left:-100%;
-    margin:0;
-    position: fixed;
-    background-color: rgba(255,255,255, .3);
+    margin:46px 0;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
   }
 
   header nav ul li {
     display:block;
     float:none;
+    padding-top: 50px;
     border-bottom:1px solid rgba(255,255,255, .3);
   }
   header nav .logo{
@@ -585,8 +828,11 @@ div#content .subsm, div#content2 .subsm, div#content3 .subsm, div#content4 .subs
   }
 
   .menu_bar .bt-menu {
+    position: fixed;
+    width: 100%;
+    z-index: 9999;
     display:block;
-    padding:20px;
+    padding:5px 20px;
     background:#C96A2B;
     color:#fff;
     text-decoration:none;
@@ -597,10 +843,267 @@ div#content .subsm, div#content2 .subsm, div#content3 .subsm, div#content4 .subs
     box-sizing:border-box;
     margin-bottom: 0px;
   }
-
-  .menu_bar i{
-    float:right;
-    font-size:40px;
+  .menu_bar img{
+    width: 80px;
+    margin-top: -10px;
   }
+  .menu_bar i{
+    margin-top: 5px;
+    float:right;
+    font-size:25px;
+  }
+   
+}
 
+/*styles for mobile ==============================================Estilos todos======0=0*/
+
+@media (max-width: 767px) {
+  .espc{
+  padding: 1em;
+}
+
+/* consultoria*/
+.box-t{
+  margin-top: -10px;
+}
+.consultoria{
+  margin-top: -10px;
+}
+.equal .este form{
+  margin: 30px 15px;
+}
+.tcolsul{
+  font-size: 20px;
+  padding-top: 20px;
+  margin-bottom: 50px;
+}
+.pnaranja{
+  padding: 0 20px;
+}
+.p-t{
+  width: 90%;
+}
+.cita{
+  padding: 30px 0;
+  font-size: 16px;
+  width: 95%;
+}
+.firma{
+  margin-top:20px;
+}
+.text-sobre{
+  font-size: 16px;
+  text-align: justify;
+}
+.parallx2 {
+  height: 1100px;
+  padding: 30px auto;
+}
+#cont2{
+  height: 1100px;
+}
+.desc{
+  font-size: 14px;
+}
+.retitulo{
+  font-size:25px;
+  margin: -5px 0 0px;
+}
+/* testimonios */
+
+.p-testimonios{
+  width: 80%;
+  margin: 0px auto 30px;
+  font-size: 12px;
+}
+
+/* Carrusel de logos*/
+.sliderlogo {
+  margin: 10px 0 0;
+  padding:5px auto;
+}
+.sliderlogo .onelogo {
+  padding: 2px 15px;
+  text-align: center;
+}
+
+/* =================================*/
+}
+@media (min-width: 768px) and (max-width: 991px) {
+ .espc{
+  padding: 1em;
+}
+.alto{
+  bottom: 50px !important;
+}
+.alto-1{
+  bottom: 40px !important;
+}
+.alto2{
+  bottom: 40px;
+  text-align: right !important;
+}
+.alto3{
+  bottom: 40px;
+  text-align: left !important;
+}
+/* titulo =================*/
+.s-t1{
+  font-size: 40px;
+}
+.s-sub1{
+  font-size: 20px;
+}
+.s-t2{
+  font-size: 24px;
+}
+.s-sub2{
+  font-size: 20px;
+}
+.s-t3{
+  font-size: 25px;
+}
+.s-sub3{
+  font-size: 20px;
+}
+.s-t4{
+  font-size: 25px;
+}
+.s-sub4{
+  font-size: 20px;
+}
+.s-t5{
+  font-size: 20px;
+}
+.s-sub5{
+  font-size: 25px;
+}
+/* consultoria*/
+.consultoria{
+  margin-top: -30px;
+}
+.equal .este form{
+  margin: 30px 20px;
+}
+.tcolsul{
+  font-size: 30px;
+  padding-top: 20px;
+  margin-bottom: 50px;
+}
+.pnaranja{
+  padding: 0 20px;
+}
+.p-t{
+  width: 90%;
+}
+.cita{
+  padding: 40px 15px;
+  font-size: 18px;
+  width: 95%;
+}
+.firma{
+  margin-top:30px;
+}
+.text-sobre{
+  font-size: 16px;
+  text-align: justify;
+}
+.parallx2 {
+  height: 620px;
+  padding: 30px auto;
+}
+#cont2{
+  height: 620px;
+}
+.desc{
+  font-size: 14px;
+}
+.retitulo{
+  font-size:25px;
+  margin: -5px 0 0px;
+}
+/* testimonios */
+
+.p-testimonios{
+  width: 80%;
+  margin: 0px auto 30px;
+  font-size: 14px;
+}
+/* Carrusel de logos*/
+.sliderlogo .onelogo {
+  text-align: center;
+}
+/* clientes */
+.flex-column {
+  max-width: 240px;
+}
+/* =================================*/
+}
+@media (min-width: 992px) and (max-width: 1199px){
+  
+.espc{
+  padding: 1em;
+}
+/* consultoria*/
+.consultoria{
+  margin-top: -30px;
+}
+.equal .este form{
+  margin: 30px 20px;
+}
+.tcolsul{
+  font-size: 30px;
+  padding-top: 20px;
+  margin-bottom: 50px;
+}
+.pnaranja{
+  padding: 0 20px;
+}
+.p-t{
+  width: 90%;
+}
+.cita{
+  padding: 40px 15px;
+  font-size: 18px;
+  width: 95%;
+}
+.firma{
+  margin-top:30px;
+}
+.text-sobre{
+  font-size: 16px;
+  text-align: justify;
+}
+.parallx2 {
+  height: 500px;
+  padding: 30px auto;
+}
+#cont2{
+  height: 500px;
+}
+.desc{
+  font-size: 14px;
+}
+.retitulo{
+  font-size:25px;
+  margin: -5px 0 0px;
+}
+/* testimonios */
+
+.p-testimonios{
+  width: 80%;
+  margin: 0px auto 30px;
+  font-size: 14px;
+}
+/* Carrusel de logos*/
+.sliderlogo .onelogo {
+  text-align: center;
+}
+/* clientes */
+.flex-column {
+  max-width: 320px;
+}
+/* ipad */
+
+/* =================================*/
 }
